# Projects

.github/workflows/: main.yml
Computation@Scale/: CMakeLists.txt  ChannelFlowSolver.cpp  ChannelFlowSolver.hpp  LICENSE.md  ManufacturedSolutionSolver.cpp  NavierStokesSolver.cpp  README.md  main.cpp  manufactured_test.cpp
Computation@Scale/Generalized_alpha_NS_1D/: CMakeLists.txt  main.cpp
Computation@Scale/Generalized_alpha_NS_1D/include/: generalized_alpha_1d.hpp
Computation@Scale/Generalized_alpha_NS_1D/src/: generalized_alpha_1s.cpp
Computation@Scale/Generalized_alpha_NS_1D/tests/: generalized_alpha_tests.cpp
